Not sure why responsive design is not working.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	<!--HEADER-->
 	<div class="header">
 		<div class="headercontainer container">
+			<div class="headermobile">
+				<img src="media/images/ic-logo.svg"/>
+				<img src="media/images/ic-on-campus.svg"/>
+				<img src="media/images/ic-online.svg"/>
+				<img src="media/images/ic-login.svg"/>
+			</div>
 			<div class="logo">
 				<img src="media/images/ic-logo.svg"/>
 				<h1 id="colmar">COLMAR</h1>
