--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
 			<div class="doesnthurtright">
 				<div class="doesnthurtevents">
 					<div class="orientation1 orientation">
-						<img src="media/images/information-orientation.jpg"/>
+						<img src="media/images/information-orientation-mobile.jpg" class="mobileorientationimage"/>
+						<img src="media/images/information-orientation.jpg" class="orientationimage"/>
 						<div class="orientationinfo">
 							<h3>Orientation Date</h3>
-							<h4>Tues 10/11 & <br>Wed 10/12: 8am-3pm</h4>
+							<h4>Tues 10/11 & Wed 10/12: 8am-3pm</h4>
 							<h5><a href="#">Read more</a><h5>
 						</div>
 					</div>
 					<div class="orientation2 orientation">
-						<img src="media/images/information-campus.jpg"/>
+						<img src="media/images/information-campus-mobile.jpg" class="mobileorientationimage"/>
+						<img src="media/images/information-campus.jpg" class="orientationimage"/>
 						<div class="orientationinfo">
 							<h3>Our Campus</h3>
 							<h4>Find which campus is close by you</h4>
@@ -77,9 +79,11 @@
 						</div>
 					</div>
 					<div class="orientation3 orientation">
-						<img src="media/images/information-guest-lecture.jpg"/>
+						<img src="media/images/information-guest-lecture-mobile.jpg" class="mobileorientationimage"/>
+						<img src="media/images/information-guest-lecture.jpg" class="orientationimage"/>
 						<div class="orientationinfo">
-							<h3>Our Guest Lecture</h3>
+							<h3 class="lecturemobile">Special Guest Lecture</h3>
+							<h3 class="lecturedesktop">Our Guest Lecture</h3>
 							<h4>Join a keynote with Oliver Sack about music about medical treatment</h4>
 							<h5><a href="#">Read more</a></h5>
 						</div>
@@ -130,7 +134,7 @@
 					</div>
 				</div>
 				<div class="class2">
-					<img src="media/images/course-computer-art.jpg"/>
+					<img src="media/images/course-business.jpg"/>
 					<div class="startlearninginfo">
 						<h3>Business</h3>
 						<h4>COURSES</h4>
@@ -138,11 +142,33 @@
 					</div>
 				</div>
 				<div class="class3">
-					<img src="media/images/course-design.jpg"/>
+					<img src="media/images/course-marketing.jpg"/>
 					<div class="startlearninginfo">
 						<h3>Marketing</h3>
 						<h4>COURSES</h4>
 						<p>Analytics, Content Marketing, Mobile Marketing</p>
+					</div>
+				</div>
+			</div>
+			<div class="classesmobile">
+				<div class="classescontainer">
+					<div class="classesbutton">
+						<h2><a href="#">Software Engineering</a></h2>
+					</div>
+					<div class="classesbutton">
+						<h2><a href="#">Computer Art</a></h2>
+					</div>
+					<div class="classesbutton">
+						<h2><a href="#">Design</a></h2>
+					</div>
+					<div class="classesbutton">
+						<h2><a href="#">Data</a></h2>
+					</div>
+					<div class="classesbutton">
+						<h2><a href="#">Business</a></h2>
+					</div>
+					<div class="classesbutton">
+						<h2><a href="#">Marketing</a></h2>
 					</div>
 				</div>
 			</div>
