Added alt to all images.  Project called for desktop size and 480px width.  Only two sizes available, not tablet size.  Some repetitive CSS; chose to leave as is to respect the timeliness of the course.  Very happy with the result; hope you enjoy

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>Colmar Academy</title>
 	<link href="reset.css" rel="stylesheet" type="text/css">
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link rel="icon" href="media/images/lionicon.png" type="image">
+	<link rel="icon" href="media/images/ic-logo.jpg" type="image">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<!--HEADER-->
@@ -36,7 +37,7 @@
 	<div class="learnsomething">
 		<div class="learnsomethingcontainer">
 			<div class="learnsomethingphoto">
-				<img src="media/images/banner.jpg"/>
+				<img src="media/images/banner.jpg" alt="Students learning at a picnic table"/>
 			</div>
 			<div class="learnsomethingtext">
 				<h1>Learn something<br>new everyday</h1>
@@ -50,7 +51,7 @@
 		<div class="doesnthurtcontainer">
 			<div class="doesnthurtleft">
 				<div class="doesnthurtphoto">
-					<img src="media/images/information-main.jpg"/>
+					<img src="media/images/information-main.jpg" alt="Man reading in a park"/>
 				</div>
 				<div class="doesnthurttext">
 					<h1>It doesn't hurt to keep practicing</h1>
@@ -61,7 +62,7 @@
 			<div class="doesnthurtright">
 				<div class="doesnthurtevents">
 					<div class="orientation1 orientation">
-						<img src="media/images/information-orientation-mobile.jpg" class="mobileorientationimage"/>
+						<img src="media/images/information-orientation-mobile.jpg" class="mobileorientationimage" alt="Overhead view of students walking on path"/>
 						<img src="media/images/information-orientation.jpg" class="orientationimage"/>
 						<div class="orientationinfo">
 							<h3>Orientation Date</h3>
@@ -70,7 +71,7 @@
 						</div>
 					</div>
 					<div class="orientation2 orientation">
-						<img src="media/images/information-campus-mobile.jpg" class="mobileorientationimage"/>
+						<img src="media/images/information-campus-mobile.jpg" class="mobileorientationimage" alt="Students studying in a cafe in front of map of South America"/>
 						<img src="media/images/information-campus.jpg" class="orientationimage"/>
 						<div class="orientationinfo">
 							<h3>Our Campus</h3>
@@ -79,7 +80,7 @@
 						</div>
 					</div>
 					<div class="orientation3 orientation">
-						<img src="media/images/information-guest-lecture-mobile.jpg" class="mobileorientationimage"/>
+						<img src="media/images/information-guest-lecture-mobile.jpg" class="mobileorientationimage" alt="Photo of guest lecturer, Oliver Sack"/>
 						<img src="media/images/information-guest-lecture.jpg" class="orientationimage"/>
 						<div class="orientationinfo">
 							<h3 class="lecturemobile">Special Guest Lecture</h3>
@@ -100,7 +101,7 @@
 			</div>
 			<div class="startlearningclasses">
 				<div class="class1">
-					<img src="media/images/course-software.jpg"/>
+					<img src="media/images/course-software.jpg" alt="Photo of desktop computer"/>
 					<div class="startlearninginfo">
 						<h3>Software Engineering</h3>
 						<h4>COURSES</h4>
@@ -108,7 +109,7 @@
 					</div>
 				</div>
 				<div class="class2">
-					<img src="media/images/course-computer-art.jpg"/>
+					<img src="media/images/course-computer-art.jpg" alt="Looking at a phone in a cafe"/>
 					<div class="startlearninginfo">
 						<h3>Computer Art</h3>
 						<h4>COURSES</h4>
@@ -116,7 +117,7 @@
 					</div>
 				</div>
 				<div class="class3">
-					<img src="media/images/course-design.jpg"/>
+					<img src="media/images/course-design.jpg" alt="Photographer shooting a subject outside"/>
 					<div class="startlearninginfo">
 						<h3>Design</h3>
 						<h4>COURSES</h4>
@@ -126,7 +127,7 @@
 			</div>
 			<div class="startlearningclasses" id="startlearningclasses2">
 				<div class="class1">
-					<img src="media/images/course-data.jpg"/>
+					<img src="media/images/course-data.jpg" alt="Open laptop"/>
 					<div class="startlearninginfo">
 						<h3>Data</h3>
 						<h4>COURSES</h4>
@@ -134,7 +135,7 @@
 					</div>
 				</div>
 				<div class="class2">
-					<img src="media/images/course-business.jpg"/>
+					<img src="media/images/course-business.jpg" alt="Chess game in progress"/>
 					<div class="startlearninginfo">
 						<h3>Business</h3>
 						<h4>COURSES</h4>
@@ -142,7 +143,7 @@
 					</div>
 				</div>
 				<div class="class3">
-					<img src="media/images/course-marketing.jpg"/>
+					<img src="media/images/course-marketing.jpg" alt="Checking message on Apple Watch"/>
 					<div class="startlearninginfo">
 						<h3>Marketing</h3>
 						<h4>COURSES</h4>
@@ -184,7 +185,7 @@
 				<div class="thesisexhibitleft">
 					<div class="thesisexhibitvideo">
 						<video autoplay muted loop>
-							<source src="media/videos/thesis.mp4" type="video/mp4">
+							<source src="media/videos/thesis.mp4" type="video/mp4" alt="Looping animation of building">
 						</video>
 					</div>
 					<div class="thesisexhibitvideoinfo">
@@ -194,14 +195,14 @@
 				</div>
 				<div class="thesisexhibitright">
 					<div class="box1">
-						<img src="media/images/thesis-fisma.jpg"/>
+						<img src="media/images/thesis-fisma.jpg" alt="Completing design specs on desk"/>
 							<div class="boxcontent">
 								<h3>Fisma: Design and Prototype</h3>
 								<p>Designer showcase of new prototype product</p>
 							</div>
 					</div>
 					<div class="box2">
-						<img src="media/images/thesis-now-and-then.jpg"/>
+						<img src="media/images/thesis-now-and-then.jpg" alt="Photo of Empire State Building"/>
 							<div class="boxcontent">
 								<h3>Now and Then</h3>
 								<p>Research study about New York</p>
