Added alt to all images. Project called for desktop size and 480px width. Only two sizes available, not tablet size. Some repetitive CSS; chose to leave as is to respect the timeliness of the course. Similarly with the file structure, I chose to leave the style.css file outside of the resources file to save time; did no realize that was not proper syntax until I submitted the project and I would have had to spend another day to redo, but will abide by this syntax moving forward.Very happy with the result; hope you enjoy

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			</div>
 		</div>
 	</div>
-	<!--FOOTER-->
+	<!--FOOTER CONTAINER-->
 	<div class="footer">
 		<div class="footertext">
 			<div class="footercopyright">
